fix: change path for the key

--- a/app/00-deployment.yaml
+++ b/app/00-deployment.yaml
@@ -54,7 +54,7 @@ spec:
           failureThreshold: 5
           periodSeconds: 15
         volumeMounts:
-          - mountPath: "/root/.ssh/id_rsa_demo"
+          - mountPath: "/app/id_rsa_demo"
             name: my-ssh-key
             readOnly: true
             subPath: ssh-privatekey
