--- a/app/00-deployment.yaml
+++ b/app/00-deployment.yaml
@@ -42,6 +42,7 @@ spec:
             port: http
           initialDelaySeconds: 60
           periodSeconds: 120
+          timeoutSeconds: 60
         resources:
           limits:
             cpu: 1000m
