--- a/app/00-deployment.yaml
+++ b/app/00-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         app: gitops-operator
     spec:
       containers:
-      - image: kainlite/gitops-operator:5eda0bad02e98fceb2bcdfe2033d67efd3a074c7
+      - image: kainlite/gitops-operator:36b424c5c508a95205b1c32917a82b9f07ee41bb
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
@@ -42,6 +42,7 @@ spec:
             port: http
           initialDelaySeconds: 60
           periodSeconds: 120
+          timeoutSeconds: 60
         resources:
           limits:
             cpu: 1000m
@@ -50,7 +51,7 @@ spec:
             cpu: 500m
             memory: 100Mi
         volumeMounts:
-        - mountPath: /app/id_rsa_demo
+        - mountPath: /home/nonroot/.ssh/id_rsa_demo
           name: my-ssh-key
           readOnly: true
           subPath: ssh-privatekey
