--- a/app/01-service.yaml
+++ b/app/01-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gitops-operator
-  namespace: default
+  namespace: gitops-operator
   labels:
     app: gitops-operator
 spec:
