--- a/app/kustomization.yaml
+++ b/app/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - 00-namespace.yaml
   - 00-deployment.yaml
   - 01-service.yaml
   - 02-rbac.yaml
