--- a/app/02-rbac.yaml
+++ b/app/02-rbac.yaml
@@ -21,6 +21,13 @@ rules:
     - get
     - watch
     - list
+  - apiGroups:
+    - core
+    resources:
+    - secrets
+    verbs:
+    - get
+    - list
 
 ---
 # Binding the role to the account
