--- a/app/00-deployment.yaml
+++ b/app/00-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       labels:
         app: gitops-operator
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
       - image: kainlite/gitops-operator:363a8958002ff9eaa5124ef851f453176637d445
         imagePullPolicy: Always
