--- a/app/00-deployment.yaml
+++ b/app/00-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         app: gitops-operator
     spec:
       containers:
-      - image: kainlite/gitops-operator:c0efefbbe9bcc8033a73f77196272a22785aac18
+      - image: kainlite/gitops-operator:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
