--- a/app/00-deployment.yaml
+++ b/app/00-deployment.yaml
@@ -32,7 +32,7 @@ spec:
           value: info
         - name: OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
           value: http://simple-collector-headless.observability.svc:4317
-        image: kainlite/gitops-operator:72c846e0c3cc7b71c14551eea6231c61f9f56141
+        image: kainlite/gitops-operator:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
